Created a firefox addon version too with seperate folders
Publish to firefox addons store

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,13 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "TabMover",
+  "name": "TabMover (Firefox)",
   "version": "1.0",
-  "description": "A Chrome extension to enable moving active tabs left or right using customizable keyboard shortcuts, simulating dragging and repositioning tabs by keyboard alone on Mac.",
+  "description": "A Firefox extension to enable moving active tabs left or right using customizable keyboard shortcuts.",
   "permissions": [
     "tabs"
   ],
   "background": {
-    "service_worker": "background.js"
+    "scripts": ["background.js"]
   },
   "commands": {
     "move-tab-left": {
@@ -26,8 +26,8 @@
     }
   },
   "icons": {
-    "16": "icons/icon16.png",
-    "64": "icons/icon64.png",
-    "128": "icons/icon128.png"
+    "16": "../icons/icon16.png",
+    "64": "../icons/icon64.png",
+    "128": "../icons/icon128.png"
   }
 }
