--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -26,8 +26,8 @@
     }
   },
   "icons": {
-    "16": "../icons/icon16.png",
-    "64": "../icons/icon64.png",
-    "128": "../icons/icon128.png"
+    "16": "icons/icon16.png",
+    "64": "icons/icon64.png",
+    "128": "icons/icon128.png"
   }
 }
