--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,11 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "TabMover (Firefox)",
+  "name": "TabMover",
   "version": "1.0",
   "description": "A Firefox extension to enable moving active tabs left or right using customizable keyboard shortcuts.",
-  "permissions": [
-    "tabs"
-  ],
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "tabmover-firefox@your-domain.com",
+      "strict_min_version": "109.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
+    }
+  },
+  "permissions": ["tabs"],
   "background": {
     "scripts": ["background.js"]
   },
@@ -26,8 +33,8 @@
     }
   },
   "icons": {
-    "16": "../icons/icon16.png",
-    "64": "../icons/icon64.png",
-    "128": "../icons/icon128.png"
+    "16": "icons/icon16.png",
+    "64": "icons/icon64.png",
+    "128": "icons/icon128.png"
   }
 }
